fix: enhance HTML structure with new contributions section and improve CSS styles for better readability

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Minimalist technical style - Cleaned */
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Lato', sans-serif;
 	line-height: 1.6;
 	color: #222;
 	background: #fff;
@@ -83,7 +83,7 @@ ul {
 li {
 	display: flex;
 	align-items: flex-start;
-	margin-bottom: 15px;
+	margin-bottom: 10px;
 	font-size: 0.95em;
 	flex-direction: column;
 }
@@ -111,6 +111,29 @@ li {
 	color: #555;
 	font-size: 0.9em;
 	line-height: 1;
+}
+.project-description {
+	margin-top: 5px;
+	color: #555;
+	font-size: 0.9em;
+	font-style: italic;
+	padding-left: 10px;
+	margin-bottom: 5px;
+}
+.my-contribution {
+	margin-bottom: 2px;
+	font-weight: bold;
+}
+.project-name {
+	font-size: 1.05em;
+}
+.contribution-item ul {
+	list-style-type: disc;
+	margin-left: 10px;
+	margin-top: 5px;
+	li {
+		margin-bottom: 2px;
+	}
 }
 
 footer {
